test/cases/pos/0028a_ifelse_block.ul
int x = 10;
int y = 3;

if x + y <= 11: {
  x = y;
} else {
  y = (x * 2) % 3;
}
