test/cases/neg/0023_c_if.ul
int x = 3;

if (x > 10) {
  x++;
} else {
  x--;
}
